# ai-ml-challenge-2020

submissions/EUL.ai_Submission/EUL.ai Code and Data/: Dockerfile  all_models.ipynb  app.json  heroku.yml  pyproject.toml
submissions/EUL.ai_Submission/EUL.ai Code and Data/EUL.ai Compiled Models/: count_vect.pickel  modelsTest.docx
submissions/EUL.ai_Submission/EUL.ai Code and Data/EUL.ai Input Data/: Validation Data Set Key Phrases.csv  inputTest.docx  keyPhrase-main.csv  keyPhrase-val.csv  sample_eula_2.docx
submissions/EUL.ai_Submission/EUL.ai Code and Data/EUL.ai Source Code/: README.md  docker-compose.yaml
submissions/EUL.ai_Submission/EUL.ai Code and Data/EUL.ai Source Code/EulaWordOnline/: EulaWordOnline.sln
submissions/EUL.ai_Submission/EUL.ai Code and Data/EUL.ai Source Code/EulaWordOnline/EulaWordOnline/: EulaWordOnline.csproj
submissions/EUL.ai_Submission/EUL.ai Code and Data/EUL.ai Source Code/EulaWordOnline/EulaWordOnline/EulaWordOnlineManifest/: EulaWordOnline.xml  SharePointProjectItem.spdata
submissions/EUL.ai_Submission/EUL.ai Code and Data/EUL.ai Source Code/EulaWordOnline/EulaWordOnlineWeb/: EulaWordOnlineWeb.csproj  Home.css  Home.html  Home.js
submissions/EUL.ai_Submission/EUL.ai Code and Data/EUL.ai Source Code/src/: app.py  count_vect.pickel  train.py
submissions/EUL.ai_Submission/EUL.ai Code and Data/EUL.ai Source Code/src/results/: val_results.csv
submissions/EUL.ai_Submission/EUL.ai Code and Data/EUL.ai Source Code/tests/: test_app.py
submissions/EUL.ai_Submission/EUL.ai Code and Data/src/: app.py  train.py
(+6 files in other folders)
